--- a/workload/job/opvn-getconfig.yaml
+++ b/workload/job/opvn-getconfig.yaml
@@ -1,62 +1,62 @@
-apiVersion: batch/v1
-kind: Job
-metadata:
-  labels:
-    k8s-app: opvn-getconfig
-    qcloud-app: opvn-getconfig
-  name: opvn-getconfig
-  namespace: opvn
-spec:
-  backoffLimit: 6
-  completions: 1
-  parallelism: 1
-  template:
-    metadata:
-      labels:
-        controller-uid: 3326f1bb-09f2-49a9-820a-2c7550d3e325
-        job-name: opvn-getconfig
-        k8s-app: opvn-getconfig
-        qcloud-app: opvn-getconfig
-    spec:
-      containers:
-      - args:
-        - -u
-        - $OVPN_SERVER_URL
-        command:
-        - ovpn_genconfig
-        env:
-        - name: OVPN_SERVER_URL
-          valueFrom:
-            configMapKeyRef:
-              key: OVPN_SERVER_URL
-              name: ovpn
-              optional: false
-        image: kylemanna/openvpn
-        imagePullPolicy: IfNotPresent
-        name: opvn-getconfig
-        resources:
-          limits:
-            cpu: 500m
-            memory: 1Gi
-          requests:
-            cpu: 250m
-            memory: 128Mi
-        securityContext:
-          privileged: false
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-        volumeMounts:
-        - mountPath: /etc/openvpn
-          name: pvc-ovpn
-        workingDir: /etc/openvpn
-      dnsPolicy: ClusterFirst
-      imagePullSecrets:
-      - name: qcloudregistrykey
-      restartPolicy: OnFailure
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
-      volumes:
-      - name: pvc-ovpn
-        persistentVolumeClaim:
-          claimName: pvc
+# apiVersion: batch/v1
+# kind: Job
+# metadata:
+#   labels:
+#     k8s-app: opvn-getconfig
+#     qcloud-app: opvn-getconfig
+#   name: opvn-getconfig
+#   namespace: opvn
+# spec:
+#   backoffLimit: 6
+#   completions: 1
+#   parallelism: 1
+#   template:
+#     metadata:
+#       labels:
+#         controller-uid: 3326f1bb-09f2-49a9-820a-2c7550d3e325
+#         job-name: opvn-getconfig
+#         k8s-app: opvn-getconfig
+#         qcloud-app: opvn-getconfig
+#     spec:
+#       containers:
+#       - args:
+#         - -u
+#         - $OVPN_SERVER_URL
+#         command:
+#         - ovpn_genconfig
+#         env:
+#         - name: OVPN_SERVER_URL
+#           valueFrom:
+#             configMapKeyRef:
+#               key: OVPN_SERVER_URL
+#               name: ovpn
+#               optional: false
+#         image: kylemanna/openvpn
+#         imagePullPolicy: IfNotPresent
+#         name: opvn-getconfig
+#         resources:
+#           limits:
+#             cpu: 500m
+#             memory: 1Gi
+#           requests:
+#             cpu: 250m
+#             memory: 128Mi
+#         securityContext:
+#           privileged: false
+#         terminationMessagePath: /dev/termination-log
+#         terminationMessagePolicy: File
+#         volumeMounts:
+#         - mountPath: /etc/openvpn
+#           name: pvc-ovpn
+#         workingDir: /etc/openvpn
+#       dnsPolicy: ClusterFirst
+#       imagePullSecrets:
+#       - name: qcloudregistrykey
+#       restartPolicy: OnFailure
+#       schedulerName: default-scheduler
+#       securityContext: {}
+#       terminationGracePeriodSeconds: 30
+#       volumes:
+#       - name: pvc-ovpn
+#         persistentVolumeClaim:
+#           claimName: pvc
